parser/sample_tests/ours/incrdecr.txt

*** Error line 10.
  i++;
   ^^
*** syntax error

